c4prj1_deck/grade.txt
Grading at Sat Sep 12 12:14:02 UTC 2020
Compiling deck.c -> deck.o
Compiling eval.c -> eval.o
eval.c: In function ‘get_match_counts’:
eval.c:242:18: error: too few arguments to function ‘calloc’
   unsigned * ans=calloc(hand->n_cards*sizeof(*ans));
                  ^
eval.c:243:25: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘n_hands’
   for (size_t i=0;i<hand->n_hands;i++){
                         ^
eval.c:245:27: error: ‘deck_t {aka struct deck_tag}’ has no member named ‘n_hands’
     for (size_t j=0;j<hand->n_hands;j++){
                           ^
Compilation of eval.c failed

Overall Grade: F
